--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,10 +11,12 @@ services:
     container_name: veggievibe
     ports:
       - "9000:9000"
+      - "8080:8080"
     volumes:
       - .:/app
     networks:
       - app-network
+    command: php -S 0.0.0.0:8080 -t /app/public
 
   # Redis service
   redis:
