--- a/.env
+++ b/.env
@@ -17,3 +17,9 @@
 APP_ENV=dev
 APP_SECRET=658c28353f4b5486979f7cbf0a8e7ba9
 ###< symfony/framework-bundle ###
+
+###> redis ###
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_TIMEOUT=20
+###< redis ###
