--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,15 @@ services:
         autowire: true
         autoconfigure: true
 
+    Redis:
+        class: Redis
+        calls:
+            - method: connect
+              arguments:
+                - '%env(REDIS_HOST)%'
+                - '%env(int:REDIS_PORT)%'
+                - '%env(int:REDIS_TIMEOUT)%'
+
     VeggieVibe\Shared\:
         resource: '../src/Shared'
         exclude:
